--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,3 +40,10 @@ body
 {
     padding: 1em;
 } 
+#footer
+{
+    background: rgb(81, 162, 228);
+    color: white;
+    padding: 0.5em;
+    text-align: center;
+}
